Kea 2.3.5 (development) released on February 22, 2023

2104.	[build]		andrei
	The library version numbers have been bumped up for the Kea 2.3.5
	development release.
	(Gitlab #2768)

2103.	[perf]		andrei
	When not explicitly configured, multi-threading is now enabled by
	default for the core Kea DHCP service ("enable-multi-threading"
	set to true). For now, HA+MT is still disabled by default
	("enable-multi-threading" and "http-dedicated-listener" both
	still set to false in the high-availability library parameters).
	(Gitlab #2402)

2102.	[func]*		tmark
	The logger to which kea-dhcp4 now logs EVAL_RESULT log
	messages issued during packet classification has been
	changed from "options4" to "dhcp4".  This corrects an
	inconsistency between kea-dhcp6 and kea-dhcp4 behavior.
	(Gitlab #2720)

2101.	[build]		andrei
	Shell tests and python tests no longer run if gtest is disabled.
	This provides the ability to run distcheck without tests.
	(Gitlab #2742)

2100.	[doc]		Kevin P. Fleming
	Fixed several JSON examples in the Kea ARM.
	(Gitlab #2494)

2099.	[func]*		tmark
	An address reserved in a global reservation must now lie
	within the range of the subnet or shared-network selected
	by Kea. If it does not, the server will attempt to allocate an
	address dynamically. This change applies to both kea-dhcp4 and
	kea-dhcp6. Previously, the servers would grant a lease for any
	globally reserved address without regard for its feasibility
	within the selected subnet. Thanks to Kyle Birkeland for
	reporting the issue and contributing the patch.
	(Gitlab #2631, #2632)

2098.	[doc]		razvan
	Updated client classification examples in the ARM with a case
	where both operands of the evaluated expression are computed at
	runtime.
	(Gitlab #2664)

2097.	[func]		tmark
	kea-dhcp4 and kea-dhcp6 will now accept renew-timer values that
	exceed rebind-timer values but will ignore them and issue a
	warning. Previously, the servers treated those values as a fatal
	configuration error.